--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -141,14 +141,6 @@
 }
 
 
-@article{ding2024efficient,
-	title     = "Efficient Retrieval with Learned Similarities",
-	author    = "Ding, Bailu and Zhai, Jiaqi",
-	journal   = "arXiv preprint arXiv:2407.15462",
-	year      = "2024",
-	volume    = "2",
-	note      = "arXiv:2407.15462v2 [cs.IR] 14 Aug 2024"
-}
 
 @inproceedings{Robertson1997,
 	author    = "S. E. Robertson and S. Walker",
@@ -284,13 +276,13 @@
 	year="2019"
 }
 @misc{radford2021learningtransferablevisualmodels,
-	title={Learning Transferable Visual Models From Natural Language Supervision}, 
-	author={Alec Radford and Jong Wook Kim and Chris Hallacy and Aditya Ramesh and Gabriel Goh and Sandhini Agarwal and Girish Sastry and Amanda Askell and Pamela Mishkin and Jack Clark and Gretchen Krueger and Ilya Sutskever},
-	year={2021},
-	eprint={2103.00020},
-	archivePrefix={arXiv},
-	primaryClass={cs.CV},
-	url={https://arxiv.org/abs/2103.00020}, 
+	title="Learning Transferable Visual Models From Natural Language Supervision", 
+	author="Alec Radford and Jong Wook Kim and Chris Hallacy and Aditya Ramesh and Gabriel Goh and Sandhini Agarwal and Girish Sastry and Amanda Askell and Pamela Mishkin and Jack Clark and Gretchen Krueger and Ilya Sutskever",
+	year="2021",
+	eprint="2103.00020",
+	archivePrefix="arXiv",
+	primaryClass="cs.CV",
+	url="https://arxiv.org/abs/2103.00020", 
 }
 @misc{chen2021evaluatinglargelanguagemodels,
 	title="Evaluating Large Language Models Trained on Code", 
@@ -301,7 +293,26 @@
 	primaryClass="cs.LG",
 	url="https://arxiv.org/abs/2107.03374", 
 }
-%%============================================================================%%
+
+@inproceedings{zhai2023revisiting,
+	title="Revisiting Neural Retrieval on Accelerators",
+	author="Zhai, Jiaqi and Gong, Zhaojie and Wang, Yueming and Sun, Xiao and Yan, Zheng and Li, Fu and Liu, Xing",
+	booktitle="Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining",
+	pages="5520--5531",
+	year="2023",
+	address="New York, NY, USA",
+	publisher="Association for Computing Machinery"
+}
+
+@article{ding2024efficient,
+	title     = "Efficient Retrieval with Learned Similarities",
+	author    = "Ding, Bailu and Zhai, Jiaqi",
+	journal   = "arXiv preprint arXiv:2407.15462",
+	year      = "2024",
+	volume    = "2",
+	note      = "arXiv:2407.15462v2 [cs.IR] 14 Aug 2024"
+}
+=========================================================================%%
 %% while using chicago reference style, both abbreviated and expanded form of %%
 %% author name format is acceptable. Refer below example for expanded form    %%
 %%============================================================================%%
